# bpkeplinger97.github.io

./: README.md  color-based-mocap.html  dumb.html  gameguesser.html  index.html  map.gexf  projects.html  relationship_map.gexf  survey-data.html  website.py
320_final/: 320_final_project.ipynb  Cargo.toml  opgg.py
320_final/.ipynb_checkpoints/: 320_final_project-checkpoint.ipynb
320_final/resources/: champ_mapping  champcopy  damage  queue_mapping  winrates
css/: main.css  style.css
media/background/: compass-rose-png-transparent-background-transparent - Copy.xcf
meetme/: index.html
sigma.js/: load-external-gexf.html
sigma.js/examples/data/: arctic.gexf
static/css/: about.css  main.css
templates/: about.html  aboutchinese.html
