[package]
name = "final_project_320"
version = "0.1.0"
authors = ["Brandon Keplinger <bkeplinger97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.104",features = ["derive"]}
serde_derive = "1.0.104"
serde_json = "1.0.48"
reqwest = { version = "0.10.4", features = ["json","blocking","cookies"] }
rusqlite = {version = "0.23.1", features = ["bundled"]}
